--- a/README.rdoc
+++ b/README.rdoc
@@ -1,76 +1,90 @@
-= address_standardization
+# address_standardization
 
-== Summary
+## Summary
 
-A tiny Ruby library to quickly standardize a postal address. Right now this supports Google Maps and MelissaData.
+A tiny Ruby library to quickly standardize a postal address, either through MelissaData or Google Maps.
 
-== Installation
+## Installation
 
-Put this in your environment.rb:
+If you are using Rails, put this in your environment.rb:
 
-  config.gem 'mcmire-address_standardization', :lib => "address_standardization", :source => "http://gems.github.com"
+    config.gem 'address_standardization'
 
-Then run <tt>rake gems:install</tt> to install the gem.
+Then run `rake gems:install` to install the gem.
 
-== Usage
+Otherwise, just run
 
-Right now there are two methods supported: MelissaData and Google Maps.
+    gem install address_standardization
 
-MelissaData provides two services: {US address lookup}[http://www.melissadata.com/lookups/AddressVerify.asp] and {Canadian address lookup}[http://www.melissadata.com/lookups/CanadianAddressVerify.asp]. They both work the same way, however. First, here's how to standardize a US address:
+## Usage
 
-  addr = AddressStandardization::MelissaData::USAddress.standardize(
-    :street => "1 Infinite Loop",
-    :city => "Cupertino",
-    :state => "CA"
-  )
+Right now this library supports two services: MelissaData and Google Maps.
+
+MelissaData provides two services itself: [US address lookup](http://www.melissadata.com/lookups/AddressVerify.asp) and [Canadian address lookup](http://www.melissadata.com/lookups/CanadianAddressVerify.asp). They both work the same way, however. First, here's how to standardize a US address:
+
+    addr = AddressStandardization::MelissaData::USAddress.standardize(
+      :street => "1 Infinite Loop",
+      :city => "Cupertino",
+      :state => "CA"
+    )
   
-This submits the address to MelissaData. If the address can't be found, you'll get back +nil+. But if the address can be found (as in this case), you'll get an instance of <tt>AddressStandardization::MelissaData::USAddress</tt>. If you store the instance, you can refer to the individual fields like so:
+This submits the address to MelissaData. If the address can't be found, you'll get back `nil`. But if the address can be found (as in this case), you'll get an instance of `AddressStandardization::MelissaData::USAddress`. If you store the instance, you can refer to the individual fields like so:
 
-  addr.street  #=> "1 INFINITE LOOP"
-  addr.city    #=> "CUPERTINO"
-  addr.state   #=> "CA"
-  addr.zip     #=> "95014-2083"
+    addr.street  #=> "1 INFINITE LOOP"
+    addr.city    #=> "CUPERTINO"
+    addr.state   #=> "CA"
+    addr.zip     #=> "95014-2083"
 
 And standardizing a Canadian address:
 
-  addr = AddressStandardization::MelissaData::CanadianAddress.standardize(
-    :street => "103 Metig St",
-    :city => "Sault Ste Marie",
-    :province => "ON"
-  )
-  addr.street      #=> "103 METIG ST RR 4"
-  addr.city        #=> "SAULT STE MARIE"
-  addr.province    #=> "ON"
-  addr.postalcode  #=> "P6A 5K9"
+    addr = AddressStandardization::MelissaData::CanadianAddress.standardize(
+      :street => "103 Metig St",
+      :city => "Sault Ste Marie",
+      :province => "ON"
+    )
+    addr.street      #=> "103 METIG ST RR 4"
+    addr.city        #=> "SAULT STE MARIE"
+    addr.province    #=> "ON"
+    addr.postalcode  #=> "P6A 5K9"
+
+Note that we refer to the province as `province`, but `state` works too. The postal code may also be referred to as `zip`.
 
 Using Google Maps to validate an address is just as easy:
 
-  addr = AddressStandardization::GoogleMaps::Address.standardize(
-    :street => "1600 Amphitheatre Parkway",
-    :city => "Mountain View",
-    :state => "CA"
-  )
-  addr.street     #=> "1600 AMPHITHEATRE PKWY"
-  addr.city       #=> "MOUNTAIN VIEW"
-  addr.state      #=> "CA"
-  addr.zip        #=> "94043"
-  addr.country    #=> "USA"
+    addr = AddressStandardization::GoogleMaps::Address.standardize(
+      :street => "1600 Amphitheatre Parkway",
+      :city => "Mountain View",
+      :state => "CA"
+    )
+    addr.street     #=> "1600 AMPHITHEATRE PKWY"
+    addr.city       #=> "MOUNTAIN VIEW"
+    addr.state      #=> "CA"
+    addr.zip        #=> "94043"
+    addr.country    #=> "USA"
   
 And, again, a Canadian address:
 
-  addr = AddressStandardization::GoogleMaps::Address.standardize(
-    :street => "1770 Stenson Blvd.",
-    :city => "Peterborough",
-    :province => "ON"
-  )
-  addr.street      #=> "1770 STENSON BLVD"
-  addr.city        #=> "PETERBOROUGH"
-  addr.province    #=> "ON"
-  addr.postalcode  #=> "K9K"
-  addr.country     #=> "CANADA"
+    addr = AddressStandardization::GoogleMaps::Address.standardize(
+      :street => "1770 Stenson Blvd.",
+      :city => "Peterborough",
+      :province => "ON"
+    )
+    addr.street      #=> "1770 STENSON BLVD"
+    addr.city        #=> "PETERBOROUGH"
+    addr.province    #=> "ON"
+    addr.postalcode  #=> "K9K"
+    addr.country     #=> "CANADA"
 
-You'll notice that for some reason, the Google Maps API doesn't return the full postal code for Canadian addresses. If you know why this is please let me know (my email address is below).
+Sharp eyes will notice that the Google Maps API doesn't return the full postal code for Canadian addresses. If you know why this is please let me know (my email address is below).
 
-== Author
+## Support
 
-(c) 2008 Elliot Winkler (elliot dot winkler at gmail dot com). Released under the MIT license.
+If you find any bugs with this plugin, feel free to:
+
+* file a bug report in the [Issues area on Github](http://github.com/mcmire/address_standardization/issues)
+* fork the [project on Github](http://github.com/mcmire/address_standardization) and send me a pull request
+* email me (*firstname* dot *lastname* at gmail dot com)
+
+## Author/License
+
+(c) 2008 Elliot Winkler. Released under the MIT license.
